--- a/scss/_errbit.scss
+++ b/scss/_errbit.scss
@@ -26,8 +26,8 @@ div.laptop {
 }
 
 div.main-content {
-  margin-top: 65px;
-  height: 500px;
+  margin-top: 50px;
+  float: left;
   .fa {
     line-height: inherit;
     color: #000;
